--- a/mars_data_challenge_part_2.ipynb
+++ b/mars_data_challenge_part_2.ipynb
@@ -581,7 +581,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1ad6eb18d30>]"
+       "[<matplotlib.lines.Line2D at 0x1f4788799a0>]"
       ]
      },
      "execution_count": 13,
@@ -630,7 +630,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1ad6eb09a60>]"
+       "[<matplotlib.lines.Line2D at 0x1f478c9fd00>]"
       ]
      },
      "execution_count": 14,
@@ -656,8 +656,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "69a64f50",
+   "execution_count": 15,
+   "id": "9c9b868a",
    "metadata": {},
    "outputs": [
     {
